# blobfigy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
blobfigy/: __init__.py  _blobfigy.pyi  array.py  file.py
src/: lib.rs
src/types/: array.rs  file.rs  mod.rs  value.rs
tests/: test_roundtrip.py
