[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "blobfigy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-cov",
    "numpy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "blobfigy._blobfigy"
